# crucible

./: .crucible.toml  .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  OPTIMIZE_BUFFERING.md  README.md  ZERO_COPY_RECV.md  builds.json  builds_1.json  builds_2.json  builds_3.json  builds_4.json  default.toml  plan.md  release.toml  repos.json  repos_1.json  repos_2.json  repos_3.json  repos_4.json
benchmark/: Cargo.toml  README.md
benchmark/config/: desync-test.toml  example.toml  memcache.toml  momento.toml  ping.toml  quick-test.toml  redis.toml  saturation.toml
benchmark/docs/: guide.md  reference.md
benchmark/src/: cluster.rs  lib.rs  main.rs  metrics.rs  saturation.rs  worker.rs
benchmark/src/admin/: mod.rs
benchmark/src/buffer/: mod.rs
benchmark/src/client/: mod.rs  momento.rs  session.rs
benchmark/src/config/: mod.rs
benchmark/src/output/: clean.rs  format.rs  json.rs  mod.rs  quiet.rs  verbose.rs
benchmark/src/protocol/: memcache.rs  memcache_binary.rs  mod.rs  ping.rs  resp.rs
benchmark/src/viewer/: mod.rs  plot.rs
cache-bench/: Cargo.toml
cache-bench/config/: example.toml
cache-bench/src/: config.rs  main.rs  metrics.rs  ratelimit.rs  worker.rs
cache/core/: Cargo.toml
cache/core/benches/: hashtable.rs
cache/core/fuzz/: Cargo.toml
cache/core/src/: arc_cache.rs  cache.rs  cache_trait.rs  cas.rs  config.rs  error.rs  hash_cache.rs  hashtable.rs  hashtable_impl.rs  hugepage.rs  item.rs  item_location.rs  lib.rs  list_cache.rs  location.rs  memory_pool.rs  metrics.rs  numeric.rs  pool.rs  reservation.rs  segment.rs  set_cache.rs  slice_segment.rs  state.rs  sync.rs
cache/heap/: Cargo.toml
cache/heap/src/: entry.rs  fifo_queue.rs  hash_storage.rs  lib.rs  list_storage.rs  location.rs  s3fifo_policy.rs  set_storage.rs  slot.rs  storage.rs  sync.rs  verifier.rs
cache/heap/tests/: large_value_tests.rs
cache/s3fifo/: Cargo.toml
cache/s3fifo/src/: lib.rs
cache/segcache/: Cargo.toml
cache/segcache/src/: lib.rs
cache/segcache/tests/: io_uring_disk_tier_tests.rs  large_value_tests.rs
cache/slab/: Cargo.toml
cache/slab/benches/: slab.rs
cache/slab/src/: allocator.rs  class.rs  config.rs  item.rs  lib.rs  location.rs  reservation.rs  sync.rs  verifier.rs
cache/slab/tests/: large_value_tests.rs
client/: Cargo.toml
client-grpc/: Cargo.toml
client-grpc/src/: command.rs  config.rs  error.rs  handle.rs  latency.rs  lib.rs  response.rs  worker.rs
client-grpc/tests/: e2e.rs
client-memcache/: Cargo.toml
client-memcache/src/: command.rs  config.rs  error.rs  handle.rs  latency.rs  lib.rs  worker.rs
client-memcache/tests/: e2e.rs
client-resp/: Cargo.toml
client-resp/src/: command.rs  config.rs  connection.rs  error.rs  handle.rs  latency.rs  lib.rs  pipeline.rs  worker.rs
client-resp/tests/: e2e.rs
client/src/: command.rs  config.rs  error.rs  handle.rs  lib.rs  router.rs  worker.rs
client/tests/: e2e.rs
crates/bakeoff/: Cargo.toml
crates/bakeoff/src/: context.rs  main.rs  results.rs  runner.rs  sweep.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: api_repo_lookup.rs  api_url_params.rs  cargo_fuzz_list_parse.rs  webhook_create.rs  webhook_handler.rs  webhook_pull_request.rs  webhook_push.rs
io/driver/: ARCHITECTURE.md  Cargo.toml
io/driver/src/: buffer.rs  buffer_pool.rs  builder.rs  driver.rs  io_buffer.rs  lib.rs  owned_buffer.rs  recv_state.rs  types.rs  udp.rs  zero_copy.rs
io/driver/tests/: buffer_pool_parsing.rs  large_buffer_tests.rs  mio_driver.rs  protocol_tests.rs  tls_transport.rs  udp_tests.rs
io/grpc/: Cargo.toml
io/grpc/fuzz/: Cargo.toml
io/grpc/src/: client.rs  frame.rs  lib.rs  metadata.rs  server.rs  status.rs
io/grpc/tests/: integration.rs
io/http2/: Cargo.toml
io/http2/fuzz/: Cargo.toml
io/http2/src/: lib.rs
io/http3/: Cargo.toml
io/http3/src/: connection.rs  error.rs  huffman.rs  lib.rs  qpack.rs
io/http3/tests/: public_servers.rs  round_trip.rs
io/kompio/: Cargo.toml  ROADMAP.md
io/kompio/examples/: connect_echo.rs  echo_bench.rs  echo_client.rs  echo_server.rs  echo_tls_server.rs
io/kompio/src/: acceptor.rs  chain.rs  completion.rs  config.rs  connection.rs  driver.rs  error.rs  event_loop.rs  guard.rs  handler.rs  lib.rs  ring.rs  tls.rs  worker.rs
io/krio/: Cargo.toml  README.md  ROADMAP.md
io/krio-client/: Cargo.toml
io/krio-client/src/: lib.rs
io/krio-client/tests/: integration.rs
io/krio-memcache/: Cargo.toml
io/krio-memcache/src/: lib.rs  pool.rs  sharded.rs
io/krio-memcache/tests/: integration.rs
io/krio-quic/: Cargo.toml
io/krio-quic/src/: endpoint.rs  error.rs  event.rs  lib.rs
io/krio-quic/tests/: echo.rs
io/krio-redis/: Cargo.toml
io/krio-redis/src/: cluster.rs  lib.rs  pool.rs  sharded.rs
io/krio-redis/tests/: integration.rs
io/krio/examples/: connect_echo.rs  echo_async_server.rs  echo_bench.rs  echo_server.rs  echo_tls_server.rs
io/krio/src/: acceptor.rs  accumulator.rs  async_event_loop.rs  completion.rs  config.rs  direct_io.rs  driver.rs  error.rs  event_loop.rs  handler.rs  lib.rs  metrics.rs  nvme.rs  ring.rs  worker.rs
io/krio/tests/: direct_io.rs  echo.rs
protocol/memcache/: Cargo.toml
protocol/memcache/fuzz/: Cargo.toml
protocol/memcache/src/: command.rs  lib.rs  request.rs  response.rs
protocol/momento/: Cargo.toml
protocol/resp/: Cargo.toml
proxy/: Cargo.toml
proxy/src/: async_worker.rs  cache.rs  client.rs  config.rs  lib.rs  logging.rs  metrics.rs  signal.rs  worker.rs
proxy/tests/: async_proxy_test.rs
server/: Cargo.toml
server/config/: directio.toml  disk-tier.toml  example.toml  heap.toml  memcached.toml  ping.toml  redis.toml  slab.toml  smoketest.toml  tokio.toml  unix-socket.toml
server/src/: affinity.rs  banner.rs  config.rs  connection.rs  disk_io.rs  execute.rs  lib.rs  logging.rs  metrics.rs  signal.rs  tls.rs  workers.rs
server/tests/: admin.rs  async_server_integration.rs  connection_reuse.rs  disk_tier_integration.rs  e2e_resp.rs  io_engine_integration.rs  large_value_io_tests.rs  shutdown.rs
tools/observer/: Cargo.toml
(+263 files in other folders)
