[workspace]
resolver = "2"

members = [
	# Cache Implementations and Core
	"cache/core",
	"cache/segcache",
	"cache/slab",
	"cache/heap",

# Protocol Implementations
	"protocol/momento",
	"protocol/ping",

	# Server
	"server",

	# Proxy
	"proxy",

# Benchmark Tool
	"benchmark",

	# In-Process Cache Benchmark
	"cache-bench",

	# Development Tasks
	"xtask",

	# Metrics
	"metrics",

]

[workspace.package]
authors = ["Brian Martin <brayniac@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brayniac/crucible"

[workspace.dependencies]
# Shared dependencies across workspace
ahash = "0.8"
bytes = "1.11.1"
clap = "4"
clocksource = "0.8"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
itoa = "1.0"
libc = "0.2"
loom = "0.7"
memmap2 = "0.9"
metriken = "0.7"
num_cpus = "1.16"
parking_lot = "0.12"
rand = "0.9"
rustls = { version = "0.23", default-features = false }
ryu = "1.0"
serde = "1"
slab = "0.4"
smallvec = "1.13"
socket2 = "0.5"
thiserror = "2"
wide = "1.1"
tokio = "1"
toml = "0.8"
webpki-roots = "0.26"
tracing = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
ringline = { path = "../ringline/ringline" }
ringline-redis = { path = "../ringline/ringline-redis" }
ringline-memcache = { path = "../ringline/ringline-memcache" }
http2-proto = "0.0.1"
grpc-proto = "0.0.1"
protocol-momento = { path = "protocol/momento" }
protocol-ping = { path = "protocol/ping" }
resp-proto = "0.0.1"
memcache-proto = "0.0.1"
cache-core = { path = "cache/core" }
segcache = { path = "cache/segcache" }
slab-cache = { path = "cache/slab" }
heap-cache = { path = "cache/heap" }
metrics = { path = "metrics" }
ketama = "0.0.1"


# Jemalloc allocator
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true
