[workspace]
resolver = "2"

members = [
	# Cache Implementations and Core
	"cache/core",
	"cache/segcache",
	"cache/slab",
	"cache/heap",

# Protocol Implementations
	"protocol/momento",
	"protocol/ping",

	# Server
	"server",

	# Proxy
	"proxy",

	# In-Process Cache Benchmark
	"cache-bench",

	# Development Tasks
	"xtask",

	# Metrics
	"metrics",

]

[workspace.package]
authors = ["Brian Martin <brayniac@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brayniac/crucible"

[workspace.dependencies]
# Shared dependencies across workspace
ahash = "0.8"
bytes = "1.11.1"
clap = "4"
clocksource = "1.0"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
itoa = "1.0"
libc = "0.2"
loom = "0.7"
memmap2 = "0.9"
metriken = "0.8"
num_cpus = "1.16"
parking_lot = "0.12"
rand = "0.9"
rustls = { version = "0.23", default-features = false }
serde = "1"
slab = "0.4"
smallvec = "1.13"
thiserror = "2"
tokio = "1"
toml = "0.8"
tracing = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
ringline = { git = "https://github.com/ringline-rs/ringline.git", rev = "9997578", features = ["timestamps"] }
ringline-redis = { git = "https://github.com/ringline-rs/ringline.git", rev = "9997578" }
http2-proto = "0.0.1"
grpc-proto = "0.0.1"
protocol-momento = { path = "protocol/momento" }
protocol-ping = { path = "protocol/ping" }
resp-proto = "0.0.1"
memcache-proto = "0.0.1"
cache-core = { path = "cache/core" }
segcache = { path = "cache/segcache" }
slab-cache = { path = "cache/slab" }
heap-cache = { path = "cache/heap" }
metrics = { path = "metrics" }
ketama = "0.0.1"


# Jemalloc allocator
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true
