[package]
name = "benchmark"
version = "0.2.17-alpha.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance cache protocol benchmark tool"

[dependencies]
# I/O abstraction layer
io-driver = { workspace = true, features = ["serde"] }

# Protocol implementations
protocol-ping = { workspace = true }
protocol-resp = { workspace = true, features = ["resp3"] }
protocol-memcache = { workspace = true, features = ["full"] }
protocol-momento = { workspace = true }

# Metrics
metrics = { workspace = true }
metriken = { workspace = true }
metriken-exposition = { version = "0.12", features = ["parquet"] }
metriken-query = { version = "0.1.2", features = ["http"] }

# Configuration
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { workspace = true, features = ["derive"] }

# Utilities
bytes = { workspace = true }
libc = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
thiserror = { workspace = true }
itoa = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# RNG for workload generation
rand = { workspace = true }
rand_xoshiro = "0.7"

# Signal handling
ctrlc = { version = "3", features = ["termination"] }

# Async runtime for admin server
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }

# Viewer dependencies
arrow = "56"
parquet = "56"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "decompression-gzip"] }
tower-livereload = "0.9"
histogram = "0.11"
include_dir = "0.7"
open = "5"
ringlog = "0.7"
http = "1"

[features]
default = ["io_uring"]
io_uring = ["io-driver/io_uring"]

[[bin]]
name = "crucible-benchmark"
path = "src/main.rs"

[package.metadata.deb]
name = "crucible-benchmark"
maintainer = "Brian Martin <brayniac@gmail.com>"
section = "net"
priority = "optional"
assets = [
    ["target/release/crucible-benchmark", "usr/bin/", "755"],
    ["config/example.toml", "etc/crucible/benchmark.toml.example", "644"],
]

[package.metadata.generate-rpm]
name = "crucible-benchmark"
assets = [
    { source = "target/release/crucible-benchmark", dest = "/usr/bin/crucible-benchmark", mode = "0755" },
    { source = "benchmark/config/example.toml", dest = "/etc/crucible/benchmark.toml.example", mode = "0644", config = true },
]
