[package]
name = "crucible-grpc-client"
version = "0.3.6"
edition.workspace = true
license.workspace = true

[dependencies]
krio = { workspace = true }
grpc = { workspace = true }
http2 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
crossbeam-channel = { workspace = true }
bytes = { workspace = true }
libc = { workspace = true }
metriken = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
tls = ["krio/tls", "http2/tls", "rustls", "webpki-roots"]

[dependencies.rustls]
workspace = true
features = ["std", "ring"]
optional = true

[dependencies.webpki-roots]
workspace = true
optional = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
grpc = { workspace = true }
bytes = { workspace = true }
