[package]
name = "crucible-resp-client"
version = "0.4.0"
edition.workspace = true
license.workspace = true

[dependencies]
ketama = { workspace = true }
protocol-resp = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "sync", "time", "macros"] }
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
server = { path = "../server" }
segcache = { path = "../cache/segcache" }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
