[package]
name = "server"
version = "0.3.5-alpha.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance cache server with multiple protocols and runtime backends"

[features]
default = []
# Enables magic bytes and checksum validation for item headers. Useful for
# debugging corruption issues but adds overhead to every read operation.
validation = ["segcache/validation", "slab-cache/validation"]
# Use jemalloc as the global allocator for better memory stats and fragmentation tracking
jemalloc = ["dep:tikv-jemallocator", "heap-cache/jemalloc"]

[dependencies]
# Cache core trait
cache-core = { workspace = true }

# Cache implementations
segcache = { workspace = true }
slab-cache = { workspace = true }
heap-cache = { workspace = true }

# Protocol implementations
protocol-ping = { workspace = true }
protocol-resp = { workspace = true, features = ["resp3"] }
protocol-memcache = { workspace = true, features = ["full"] }

# I/O driver (native runtime)
kompio = { workspace = true }

# Core utilities
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
itoa = { workspace = true }
slab = { workspace = true }
libc = { workspace = true }

# Configuration
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
num_cpus = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive"] }

# Metrics
metrics = { workspace = true }
metriken = { workspace = true }

# Signal handling
ctrlc = { version = "3", features = ["termination"] }

# Structured logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Admin server (health + metrics endpoints)
axum = "0.8"

# Tokio runtime - required for admin server
tokio = { workspace = true, features = ["rt", "net", "sync", "time", "macros"] }

# Jemalloc allocator (optional)
tikv-jemallocator = { workspace = true, optional = true }

[[bin]]
name = "crucible-server"
path = "src/bin/server.rs"

[[bin]]
name = "ping-server"
path = "src/bin/ping.rs"

[package.metadata.deb]
name = "crucible-server"
maintainer = "Brian Martin <brayniac@gmail.com>"
section = "net"
priority = "optional"
assets = [
    ["target/release/crucible-server", "usr/bin/", "755"],
    ["config/example.toml", "etc/crucible/server.toml.example", "644"],
]

[package.metadata.generate-rpm]
name = "crucible-server"
assets = [
    { source = "target/release/crucible-server", dest = "/usr/bin/crucible-server", mode = "0755" },
    { source = "server/config/example.toml", dest = "/etc/crucible/server.toml.example", mode = "0644", config = true },
]
