[package]
name = "cache-core"
version = "0.2.14"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Redesigned cache-core with layer-based architecture"

[features]
default = []
loom = ["dep:loom"]
# Adds magic bytes and checksums to item headers for corruption detection.
# Useful for debugging but adds overhead to every read operation.
validation = []

[dependencies]
ahash = { workspace = true }
bytes = { workspace = true }
clocksource = { workspace = true }
crossbeam-deque = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
wide = { workspace = true }

# Optional loom support for concurrency testing
loom = { workspace = true, features = ["checkpoint"], optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "hashtable"
harness = false
