[package]
name = "heap-cache"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Heap-allocated cache using system allocator with MultiChoiceHashtable"

[features]
default = []
loom = ["cache-core/loom", "dep:loom"]
jemalloc = []

[dependencies]
cache-core = { workspace = true }
clocksource = { workspace = true }
loom = { workspace = true, optional = true }
