[package]
name = "heap-cache"
version = "0.2.17"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Heap-allocated cache using system allocator with MultiChoiceHashtable"

[features]
default = []
loom = ["cache-core/loom", "dep:loom"]
jemalloc = ["dep:tikv-jemalloc-ctl"]

[dependencies]
cache-core = { workspace = true }
clocksource = { workspace = true }
loom = { workspace = true, optional = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
