[package]
name = "s3fifo"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "S3-FIFO cache with segment-based storage"

[features]
default = []
validation = ["cache-core/validation"]

[dependencies]
cache-core = { workspace = true }
clocksource = { workspace = true }
