[package]
name = "segcache"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Segment-based cache with TTL buckets and configurable eviction"

[features]
default = []
validation = ["cache-core/validation"]

[dependencies]
cache-core = { workspace = true }
clocksource = { workspace = true }

[dev-dependencies]
tempfile = "3"
