[package]
name = "slab-cache"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Memcached-style slab allocator cache with per-object LRU eviction"

[features]
default = []
validation = ["cache-core/validation"]

[dependencies]
cache-core = { workspace = true }
clocksource = { workspace = true }
crossbeam-deque = { workspace = true }
parking_lot = { workspace = true }
