[package]
name = "bakeoff"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Experiment driver for cache server benchmarking"

[[bin]]
name = "bakeoff"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
