[package]
name = "io-driver"
version = "0.2.19-alpha.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified I/O framework with io_uring and mio backends"

[features]
default = ["io_uring", "tls"]
io_uring = ["dep:io-uring"]
serde = ["dep:serde"]
tls = ["dep:rustls", "dep:webpki-roots"]

[dependencies]
arrayvec = "0.7"
bitflags = "2"
smallbox = "0.8"
mio = { workspace = true, features = ["os-poll", "net"] }
libc = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
slab = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

# Transport layer
bytes = { workspace = true }

# TLS support (optional)
rustls = { workspace = true, default-features = false, features = ["std", "tls12", "ring"], optional = true }
webpki-roots = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true, optional = true }
