[package]
name = "grpc"
version = "0.3.4-alpha.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC client implementation for kompio-based applications"

[dependencies]
bytes = { workspace = true }
http2 = { workspace = true }

[dev-dependencies]
