[package]
name = "grpc"
version = "0.3.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC client implementation for krio-based applications"

[dependencies]
bytes = { workspace = true }
http2 = { workspace = true }

[dev-dependencies]
