[package]
name = "grpc"
version = "0.3.8"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC client implementation for ringline-based applications"

[dependencies]
bytes = { workspace = true }
http2 = { workspace = true }

[dev-dependencies]
