[package]
name = "http2"
version = "0.2.17-alpha.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/2 implementation for io-driver-based applications"

[dependencies]
bytes = { workspace = true }
io-driver = { workspace = true }

[dev-dependencies]
