[package]
name = "http3"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
krio-quic = { workspace = true }

[dev-dependencies]
krio = { workspace = true }
libc = { workspace = true }
quinn-proto = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["std", "ring"] }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
