[package]
name = "krio-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
krio = { workspace = true }
protocol-resp = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
server = { path = "../../server" }
segcache = { workspace = true }
toml = { workspace = true }
