[package]
name = "krio-quic"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
krio = { workspace = true }
quinn-proto = { workspace = true }
rustls = { workspace = true, features = ["std", "ring"] }
slab = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
