[package]
name = "krio-redis"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
ketama = { workspace = true }
krio = { workspace = true, features = ["tls"] }
protocol-resp = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
server = { path = "../../server" }
segcache = { workspace = true }
toml = { workspace = true }
