[package]
name = "krio"
version = "0.1.3"
edition = "2024"

[features]
tls = ["rustls"]

[dependencies]
bytes = { workspace = true }
crossbeam-channel = "0.5"
io-uring = "0.7"
libc = "0.2"
metrics = { workspace = true }
metriken = { workspace = true }
pin-project-lite = "0.2"
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "ring"] }

[[example]]
name = "echo_tls_server"
required-features = ["tls"]
