[package]
name = "protocol-momento"
version = "0.2.19-alpha.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight Momento cache protocol implementation for kompio-based applications"

[dependencies]
bytes = { workspace = true }
grpc = { workspace = true }
http2 = { workspace = true }

[[bin]]
name = "momento-cli"
path = "src/bin/momento-cli.rs"

[dev-dependencies]
serial_test = "3"
