[package]
name = "protocol-momento"
version = "0.3.8"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight Momento cache protocol implementation for ringline-based applications"

[dependencies]
bytes = { workspace = true }
grpc = { workspace = true }
http2 = { workspace = true }

[[bin]]
name = "momento-cli"
path = "src/bin/momento-cli.rs"

[dev-dependencies]
serial_test = "3"
