[package]
name = "protocol-momento"
version = "0.4.2-alpha.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight Momento cache protocol implementation for ringline-based applications"

[dependencies]
bytes = { workspace = true }
grpc-proto = { workspace = true }
http2-proto = { workspace = true }

[[bin]]
name = "momento-cli"
path = "src/bin/momento-cli.rs"

[dev-dependencies]
serial_test = "3"
